...
    <string name="ui_downloading_dictionary">Downloading dictionary…</string>
    <string name="ui_download_failed_retry">Download failed. Check your connection and try again.</string>
    <string name="ui_pages_of_read">%1$d of %2$d pages read</string>
    <string name="ui_open_in_riffle">Open in Riffle</string>
    <string name="ui_add_a_note">Add a note…</string>
    <string name="ui_add_to_playlist">Add to playlist</string>
    <string name="ui_all_books">All Books</string>
    <string name="ui_animation_speed">Animation Speed</string>
    <string name="ui_annotations">Annotations</string>
    <string name="ui_back">Back</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_chapters">Chapters</string>
    <string name="ui_collections">Collections</string>
...
    <string name="ui_retry">Retry</string>
    <string name="ui_save">Save</string>
    <string name="ui_search">Search</string>
    <string name="ui_series">Series</string>
    <string name="ui_share">Share</string>
    <string name="ui_starting_installer">Starting installer…</string>
    <string name="ui_table_of_contents">Table of Contents</string>
    <string name="ui_to_read">To Read</string>
    <string name="ui_try_again">Try again</string>
    <string name="ui_unable_to_connect_to_source">Unable to connect to source</string>
    <string name="ui_update">Update</string>
    <string name="ui_annotations_count">Annotations (%1$d)</string>
    <string name="ui_no_results_for">No results for \'%1$s\'</string>
...
